--- a/src/Receitaws.API.Client/Resources/Routes.resx
+++ b/src/Receitaws.API.Client/Resources/Routes.resx
@@ -118,6 +118,27 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="BaseApiPath" xml:space="preserve">
-    <value>https://baconipsum.com/api/</value>
+    <value>https://receitaws.com.br</value>
+  </data>
+  <data name="Version1" xml:space="preserve">
+    <value>/v1</value>
+  </data>
+  <data name="LegalEntity" xml:space="preserve">
+    <value>/cnpj</value>
+  </data>
+  <data name="Account" xml:space="preserve">
+    <value>/account</value>
+  </data>
+  <data name="Quota" xml:space="preserve">
+    <value>/quota</value>
+  </data>
+  <data name="Calls" xml:space="preserve">
+    <value>/calls</value>
+  </data>
+  <data name="Report" xml:space="preserve">
+    <value>/report</value>
+  </data>
+  <data name="Days" xml:space="preserve">
+    <value>/days</value>
   </data>
 </root>
